--- a/website/style.css
+++ b/website/style.css
@@ -1,14 +1,6 @@
-$start:rgba(66,181,213,0.5);
-$end:rgba(58,210,11,0.5);;
-
 body{
   font-family:sans-serif;
-  background-image: -moz-linear-gradient(30deg, $start 0%, $end 100%);
-	background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,$start), color-stop(100%,$end));
-	background: -webkit-linear-gradient(30deg, $start 0%,$end 100%);
-	background: -o-linear-gradient(30deg, $start 0%,$end 100%);
-	background: -ms-linear-gradient(30deg, $start 0%,$end 100%);
-	background: linear-gradient(30deg, $start 0%,$end 100%);
+	background: rgb(108, 172, 108);
 }
 
 h1{
@@ -47,11 +39,11 @@ input::after{
   text-align:center;
   margin:auto;
   li{
-  list-style:none;
-  display:inline-block;
-    background:rgba(256,256,256,0.5);
-    padding:0.7em;
-    margin:0 0.1em;
+    list-style:none;
+    display:inline-block;
+      background:;
+      padding:0.7em;
+      margin:0 0.1em;
   }
   li.active{
     background-color:rgba(256,256,256,0.95);
